--- a/task_04/task_04.css
+++ b/task_04/task_04.css
@@ -4,35 +4,35 @@ body {
 }
 
 /***************************************
-    固定宽度
+    固定宽高
 ***************************************/
 
 /*绝对定位*/
-#centered {
-    background: #ccc;
-    position: absolute;
-    width: 400px;
-    height: 200px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-/*负外边距*/
 /*#centered {*/
     /*background: #ccc;*/
     /*position: absolute;*/
-    /*width:400px;*/
-    /*height:200px;*/
-    /*left: 50%;*/
-    /*top: 50%;*/
-    /*margin-left:-200px;*/
-    /*margin-top:-100px;*/
+    /*width: 400px;*/
+    /*height: 200px;*/
+    /*top: 0;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*margin: auto;*/
 /*}*/
 
-/*float*/
+/*负外边距*/
+#centered {
+    background: #ccc;
+    position: absolute;
+    width:400px;
+    height:200px;
+    left: 50%;
+    top: 50%;
+    margin-left:-200px;
+    margin-top:-100px;
+}
+
+/*借助于float div*/
 /*html, body {*/
     /*height: 100%;*/
 /*}*/
@@ -52,22 +52,48 @@ body {
 /*}*/
 
 /***************************************
-    不固定宽度
+    可变宽高
 ***************************************/
+/*IE9+ CSS3 translate*/
+/*#centered {*/
+    /*background: #ccc;*/
+    /*position: fixed;*/
+    /*left: 50%;*/
+    /*top: 50%;*/
+    /*transform: translateX(-50%) translateY(-50%);*/
+/*}*/
 
-#left-top {
+/*使用table*/
+/*body {*/
+    /*display: table;*/
+    /*width: 400px;*/
+    /*height: 200px;*/
+ /*}*/
+/*#centered {*/
+    /*display: table-cell;*/
+    /*vertical-align: middle;*/
+    /*text-align: center;*/
+    /*width: 50%;*/
+    /*margin: 0 auto;*/
+    /*background: #ccc;*/
+/*}*/
+
+
+#left-top, #right-bottom {
     width: 50px;
     height: 50px;
     background: yellow;
+    position: absolute;
+}
+
+#left-top {
     border-radius: 0 0 100% 0;
+    left: 0;
+    top: 0;
 }
 
 #right-bottom {
-    width: 50px;
-    height: 50px;
-    background: yellow;
     border-radius: 100% 0 0 0;
-    position: absolute;
     right: 0;
     bottom: 0;
 }
